Make the challenge runtime catalog-native
The catalog was parsed and immediately down-converted to the legacy
Challenge/Rank model, which still ran everything. The executor now
evaluates ChallengeDefinition directly: an exhaustive switch over the
sealed CompletionRequirement hierarchy (mixed requirement kinds work,
items are only consumed once every other requirement passed) and reward
bundles applied by the new RewardApplier (all permission rewards grant,
no more op:/console: string round-trip, Adventure broadcast instead of
the deprecated broadcastMessage).

The new ChallengeUnlockEvaluator evaluates rank and challenge unlock
requirements against island progress with structured missing-requirement
results, shared by the executor, signs, and tab completion. Challenge-
level unlock requirements are now enforced on the command and sign
completion paths, matching the menu.

resolveChallenge and its consumers (complete/info/admin commands, sign
rendering) operate on catalog definitions; the legacy model remains only
behind the menu rendering. The tool-menu's tool-to-challenge mapping is
deliberately dropped; the catalog has no tool concept. Mixed completion
kinds downgrade from load error to a menu-only warning.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>